fixtures/runtime/valid/hello.php
<?php
// runtime-fixture: kind=valid expected_stdout="hello runtime\n"
echo "hello runtime\n";
