fixtures/runtime/invalid/errors/undefined-function.php
<?php
// runtime-fixture: kind=invalid expected_rust_status=runtime_error diagnostic_id=E_PHP_RUNTIME_UNDEFINED_FUNCTION
runtime_missing_function();
